# SharedMemory

./: README.md
SharedMemClient/: CMakeLists.txt  SharedMemClient.cpp
SharedMemServer/: CMakeLists.txt  SharedMemServer.cpp
